Bug 117033 - Tooltips show the wrong symbol for MOD3 combinations
Summary: Tooltips show the wrong symbol for MOD3 combinations
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All macOS (All)
: medium normal
Assignee: Heiko Tietze
URL:
Whiteboard: target:6.1.0 target:6.0.4
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-16 09:10 UTC by Heiko Tietze
Modified: 2018-04-17 13:51 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Heiko Tietze 2018-04-16 09:10:15 UTC
On macOS the tooltips show a symbol for mod1/cmd (⌘) and mod2/alt (⌥). But mod3/ctrl shows the same symbol instead of the usual ^.

An example is the function Clear direct formatting in Writer defaulting to ctrl+M.
Comment 1 Heiko Tietze 2018-04-16 10:12:53 UTC
Patch at https://gerrit.libreoffice.org/#/c/52957/
Comment 2 Commit Notification 2018-04-16 18:10:39 UTC
heiko tietze committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=e422efcaff1bf789343a73a16e46b00f303e3032

tdf#117033 - Tooltips show the wrong symbol for MOD3 combinations

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Heiko Tietze 2018-04-16 18:16:12 UTC
And fixed. Should be the correct caret now (^).
Comment 4 Tor Lillqvist 2018-04-16 18:35:14 UTC
Thanks. Cherry-pick to 6.0?
Comment 5 Heiko Tietze 2018-04-16 22:23:36 UTC
(In reply to Tor Lillqvist from comment #4)
> Thanks. Cherry-pick to 6.0?

MOD3 wasn't customizable (solved in bug 34704) so we would have to pick both.
Comment 6 Tor Lillqvist 2018-04-17 04:08:02 UTC
But that is a separate bug; wouldn't already just displaying tooltips correctly be an improvement?
Comment 7 Commit Notification 2018-04-17 13:51:59 UTC
heiko tietze committed a patch related to this issue.
It has been pushed to "libreoffice-6-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=54473bec1f419773dd0a44c3ed2754b7f7f7e840&h=libreoffice-6-0

tdf#117033 - Tooltips show the wrong symbol for MOD3 combinations

It will be available in 6.0.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.