tdf#117033 - Tooltips show the wrong symbol for MOD3 combinations

Symbol for MOD3 added

Change-Id: Idb76199fbff240fe39c96ed837db098a4283d70b
Reviewed-on: https://gerrit.libreoffice.org/52957
Reviewed-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Tor Lillqvist <tml@collabora.com>
Tested-by: Jenkins <ci@libreoffice.org>
(cherry picked from commit e422efcaff1bf789343a73a16e46b00f303e3032)
Reviewed-on: https://gerrit.libreoffice.org/53015
Reviewed-by: Heiko Tietze <tietze.heiko@gmail.com>
(cherry picked from commit 54473bec1f419773dd0a44c3ed2754b7f7f7e840)