vcl/osx/salframe.cxx
@@ -1026,13 +1026,13 @@ OUString AquaSalFrame::GetKeyName( sal_uInt16 nKeyCode )
     if( it != aKeyMap.end() )
     {
         if( (nKeyCode & KEY_SHIFT) != 0 )
-            aResult.append( u'\x21e7' );
+            aResult.append( u'\x21e7' ); //⇧
         if( (nKeyCode & KEY_MOD1) != 0 )
-            aResult.append( u'\x2318' );
-        // we do not really handle Alt (see below)
-        // we map it to MOD3, which is actually Command
-        if( (nKeyCode & (KEY_MOD2|KEY_MOD3)) != 0 )
-            aResult.append( u'\x2325' );
+            aResult.append( u'\x2318' ); //⌘
+        if( (nKeyCode & KEY_MOD2) != 0 )
+            aResult.append( u'\x2325' ); //⌥
+        if( (nKeyCode & KEY_MOD3) != 0 )
+            aResult.append( u'\x2303' ); //⌃
 
         aResult.append( it->second );
     }
